# Student-performance

./: README.md  Student.ipynb  app.py  pyproject.toml  student_performance_model.pkl
